tests/golden/err-import-missing-dir/expected_error.txt
error: `./missing` に一致するファイル・サブディレクトリが見つかりません
 --> ./_.clum:1:2
  |
1 | @./missing
  |  ^^^^^^^^^
